--- a/PowerLib.System.ComponentModel.DataAnnotations/PowerLib.System.ComponentModel.DataAnnotations.csproj
+++ b/PowerLib.System.ComponentModel.DataAnnotations/PowerLib.System.ComponentModel.DataAnnotations.csproj
@@ -4,34 +4,25 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{29F0236A-67BF-4A4A-8846-92502681EF6F}</ProjectGuid>
+    <ProjectGuid>{615C5CDA-2907-4355-A728-2B7CD1B63C92}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PowerLib.SqlClr.Deploy</RootNamespace>
-    <AssemblyName>PowerLib.SqlClr.Deploy</AssemblyName>
+    <RootNamespace>PowerLib.System.ComponentModel.DataAnnotations</RootNamespace>
+    <AssemblyName>PowerLib.System.ComponentModel.DataAnnotations</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <TargetFrameworkProfile />
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG</DefineConstants>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
     <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -39,10 +30,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <UseVSHostingProcess>false</UseVSHostingProcess>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
@@ -50,27 +37,24 @@
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>..\powerlib.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
+  <PropertyGroup>
+    <DelaySign>false</DelaySign>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.XML" />
-    <Reference Include="System.Xml.Serialization" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataAnnotations\FixedLengthAttribute.cs" />
+    <Compile Include="DataAnnotations\FunctionParameterAttribute.cs" />
+    <Compile Include="DataAnnotations\PrecisionScaleAttribute.cs" />
+    <Compile Include="DataAnnotations\FunctionResultAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PwrSqlClrObjectsExplorer.cs" />
-    <Compile Include="PwrSqlClrCommandBuilder.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\PowerLib.System.ComponentModel.DataAnnotations\PowerLib.System.ComponentModel.DataAnnotations.csproj">
-      <Project>{615c5cda-2907-4355-a728-2b7cd1b63c92}</Project>
-      <Name>PowerLib.System.ComponentModel.DataAnnotations</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\PowerLib.System\PowerLib.System.csproj">
-      <Project>{34d71a5d-1f7c-4a23-8404-5956fa32730a}</Project>
-      <Name>PowerLib.System</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
