Change methods to work with FileSystemInfo objects. Change methods to work with jagged array. Update description.

--- a/PowerLib.System/PowerLib.System.csproj
+++ b/PowerLib.System/PowerLib.System.csproj
@@ -118,12 +118,12 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Arrays\ArraySlice.cs" />
-    <None Include="ClassDiagram1.cd" />
     <Compile Include="Collections\Context\ElementContext.cs" />
     <Compile Include="Collections\Context\HierarchicalContext.cs" />
     <Compile Include="Collections\IElementContext.cs" />
     <Compile Include="Collections\IHierarchicalContext.cs" />
     <Compile Include="Collections\List\PwrKeySortedList.cs" />
+    <Compile Include="Collections\List\PwrListProxy.cs" />
     <Compile Include="Collections\List\PwrSortedList.cs" />
     <Compile Include="Collections\Queue\IDeque.cs" />
     <Compile Include="Collections\Queue\IQueue.cs" />
@@ -145,9 +145,6 @@
     <Compile Include="DateTimeInterval.cs" />
     <Compile Include="IO\FileSystemHierarchicalContext.cs" />
     <Compile Include="IO\FileSystemInfoExtension.cs" />
-    <Compile Include="IO\HierarchicalDirectoryInfo.cs" />
-    <Compile Include="IO\HierarchicalFileInfo.cs" />
-    <Compile Include="IO\HierarchicalFileSystemInfo.cs" />
     <Compile Include="IO\RangeStream.cs" />
     <Compile Include="IO\Streamed\BaseFlaggedStreamedArray.cs" />
     <Compile Include="IO\Streamed\BaseFlaggedStreamedCollection.cs" />
