--- a/PowerLib.System/PowerLib.System.csproj
+++ b/PowerLib.System/PowerLib.System.csproj
@@ -463,6 +463,11 @@
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>mkdir "$(SolutionDir)$(ConfigurationName)\PWRLIB"
+copy /y "$(TargetPath)" "$(SolutionDir)$(ConfigurationName)\PWRLIB\$(TargetFileName)"
+</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
