--- a/PowerLib.SqlServer/PowerLib.SqlServer.csproj
+++ b/PowerLib.SqlServer/PowerLib.SqlServer.csproj
@@ -112,6 +112,11 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>mkdir "$(SolutionDir)$(ConfigurationName)\PWRSQL"
+copy /y "$(TargetPath)" "$(SolutionDir)$(ConfigurationName)\PWRSQL\$(TargetFileName)"
+</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
