--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 /PowerLib.System.Data.Linq/bin
 /PowerLib.System.Data.SqlTypes/obj
 /PowerLib.System.Data.SqlTypes/bin
+/PowerLib.SqlRuntime/obj
+/PowerLib.SqlRuntime/bin
 /PowerLib.SqlServer/obj
 /PowerLib.SqlServer/bin
 /PowerLib.SqlClr.Deploy.Utility/obj
