--- a/PowerLib.System.Data.SqlTypes/PowerLib.System.Data.SqlTypes.csproj
+++ b/PowerLib.System.Data.SqlTypes/PowerLib.System.Data.SqlTypes.csproj
@@ -22,6 +22,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <UseVSHostingProcess>false</UseVSHostingProcess>
+    <DocumentationFile>bin\Debug\PowerLib.System.Data.SqlTypes.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -31,6 +32,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <UseVSHostingProcess>false</UseVSHostingProcess>
+    <DocumentationFile>bin\Release\PowerLib.System.Data.SqlTypes.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
@@ -51,9 +53,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Collections\SqlLongRangeArray.cs" />
+    <Compile Include="Collections\SqlLongRangeCollection.cs" />
+    <Compile Include="Collections\SqlLongRangeRegularArray.cs" />
     <Compile Include="Compression\SqlZipArchive.cs" />
     <Compile Include="Compression\SqlZipArchiveFunctions.cs" />
+    <Compile Include="FileSystem\SqlDirectoryInfo.cs" />
+    <Compile Include="FileSystem\SqlFileSystemFunctions.cs" />
     <Compile Include="IO\SqlTypesIOExtension.cs" />
+    <Compile Include="FileSystem\SqlFileInfo.cs" />
+    <Compile Include="SqlLongRange.cs" />
     <Compile Include="SqlRange.cs" />
     <Compile Include="Net\SqlUriFunctions.cs" />
     <Compile Include="Net\SqlUri.cs" />
@@ -119,6 +128,10 @@
     <Compile Include="Text\SqlRegexFunctions.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\PowerLib.SqlRuntime\PowerLib.SqlRuntime.csproj">
+      <Project>{8271bd07-09ba-49a9-bf97-2c594e6d582c}</Project>
+      <Name>PowerLib.SqlRuntime</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PowerLib.System.Data\PowerLib.System.Data.csproj">
       <Project>{45b90168-c6de-4ff8-939b-3d933995905e}</Project>
       <Name>PowerLib.System.Data</Name>
@@ -128,6 +141,7 @@
       <Name>PowerLib.System</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>mkdir "$(SolutionDir)$(ConfigurationName)\PWRLIB"
