An assembly was added to work with web services. Add NameValueCollection UDT and functions to work with it.

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@
 /packages
 /Debug
 /Release
+/.vs/PowerLib/v15
+/PowerLib.SqlServer.Web/bin/Release
+/PowerLib.SqlServer.Web/obj/Release
+/PowerLib.System.Help
